--- a/angular.json
+++ b/angular.json
@@ -5,11 +5,7 @@
   "projects": {
     "ptb-frontend": {
       "projectType": "application",
-      "schematics": {
-        "@schematics/angular:component": {
-          "style": "css"
-        }
-      },
+      "schematics": {},
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -29,7 +25,6 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/tailwindcss/dist/tailwind.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -68,65 +63,67 @@
         "serve": {
           "builder": "ngx-build-plus:dev-server",
           "options": {
-            "browserTarget": "ptb-frontend:build",
             "extraWebpackConfig": "webpack.config.js",
-            "configurations": {
-              "production": {
-                "browserTarget": "ptb-frontend:build:production"
-              }
-            }
+            "browserTarget": "ptb-frontend:build"
           },
-          "extract-i18n": {
-            "builder": "@angular-devkit/build-angular:extract-i18n",
-            "options": {
-              "browserTarget": "ptb-frontend:build"
+          "configurations": {
+            "production": {
+              "browserTarget": "ptb-frontend:build:production"
             }
+          }
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "ptb-frontend:build"
+          }
+        },
+        "test": {
+          "builder": "ngx-build-plus:karma",
+          "options": {
+            "extraWebpackConfig": "webpack.config.js",
+            "codeCoverage": true,
+            "main": "src/test.ts",
+            "polyfills": "src/polyfills.ts",
+            "tsConfig": "tsconfig.spec.json",
+            "karmaConfig": "karma.conf.js",
+            "assets": [
+              "src/favicon.ico",
+              "src/assets"
+            ],
+            "styles": [
+              "src/styles.css"
+            ],
+            "scripts": []
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "tsconfig.app.json",
+              "tsconfig.spec.json",
+              "e2e/tsconfig.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        },
+        "e2e": {
+          "builder": "@angular-devkit/build-angular:protractor",
+          "options": {
+            "protractorConfig": "e2e/protractor.conf.js",
+            "devServerTarget": "ptb-frontend:serve"
           },
-          "test": {
-            "builder": "ngx-build-plus:karma",
-            "options": {
-              "codeCoverage": true,
-              "main": "src/test.ts",
-              "polyfills": "src/polyfills.ts",
-              "tsConfig": "tsconfig.spec.json",
-              "karmaConfig": "karma.conf.js",
-              "assets": [
-                "src/favicon.ico",
-                "src/assets"
-              ],
-              "styles": [
-                "src/styles.css"
-              ],
-              "scripts": []
-            }
-          },
-          "lint": {
-            "builder": "@angular-devkit/build-angular:tslint",
-            "options": {
-              "tsConfig": [
-                "tsconfig.app.json",
-                "tsconfig.spec.json",
-                "e2e/tsconfig.json"
-              ],
-              "exclude": [
-                "**/node_modules/**"
-              ]
-            }
-          },
-          "e2e": {
-            "builder": "@angular-devkit/build-angular:protractor",
-            "options": {
-              "protractorConfig": "e2e/protractor.conf.js",
-              "devServerTarget": "ptb-frontend:serve"
-            },
-            "configurations": {
-              "production": {
-                "devServerTarget": "ptb-frontend:serve:production"
-              }
+          "configurations": {
+            "production": {
+              "devServerTarget": "ptb-frontend:serve:production"
             }
           }
         }
       }
     }
-  }
+  },
+  "defaultProject": "ptb-frontend"
 }
