--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~10.1.4",
     "@angular/platform-browser-dynamic": "~10.1.4",
     "@angular/router": "~10.1.4",
+    "@fullhuman/postcss-purgecss": "^4.0.3",
     "ngx-build-plus": "^10.1.1",
     "rxjs": "~6.6.0",
     "tailwindcss-hero-patterns": "0.0.1",
