--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
+    "test-with-coverage": "istanbul cover jasmine-node --captureExceptions spec/ && cat ./coverage/lcov.info | codacy-coverage && rm -rf ./coverage",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
@@ -20,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~10.1.4",
     "@angular/router": "~10.1.4",
     "@fullhuman/postcss-purgecss": "^4.0.3",
+    "codacy-coverage": "^3.4.0",
     "ngx-build-plus": "^10.1.1",
     "rxjs": "~6.6.0",
     "tailwindcss-hero-patterns": "0.0.1",
