PTB-171: fix bug

--- a/.github/workflows/codacy.yaml
+++ b/.github/workflows/codacy.yaml
@@ -28,6 +28,7 @@ jobs:
       
       - name: Generate coverage-report
         run: |
+            npm i
             ng test
             
       - name: Run codacy-coverage-reporter
