--- a/.github/workflows/codacy.yaml
+++ b/.github/workflows/codacy.yaml
@@ -29,7 +29,7 @@ jobs:
       - name: Generate coverage-report
         run: |
             npm ci
-            npm run test
+            npm run test:prod
             
       - name: Run codacy-coverage-reporter
         uses: codacy/codacy-coverage-reporter-action@v1
