--- a/.github/workflows/codacy.yaml
+++ b/.github/workflows/codacy.yaml
@@ -30,6 +30,7 @@ jobs:
         run: |
             npm ci
             npm run test:prod
+            npm run lint
             
       - name: Run codacy-coverage-reporter
         uses: codacy/codacy-coverage-reporter-action@v1
